// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`externs-generator generation for scoped modules 1`] = `
Object {
  "/out/cjs_named_exports.js": "// @formatter:off
const __cjs_named_exports = {};
__cjs_named_exports.bar;
__cjs_named_exports.foo;
",
  "/out/main_implicit.js": "// @formatter:off
var foo;
const __main_implicit = {};
",
  "/out/scoped__exports_sugar_esm.js": "// @formatter:off
const __scoped__exports_sugar_esm = {};
__scoped__exports_sugar_esm.barfoo;
__scoped__exports_sugar_esm.foobar;
",
  "/out/untyped_cjs.js": "// @formatter:off
var UntypedCjs;
const __untyped_cjs = {};
__untyped_cjs.useFoo;
",
  "/out/untyped_cjs_and_esm.js": "// @formatter:off
var UntypedCjsAndEsm;
const __untyped_cjs_and_esm = {};
__untyped_cjs_and_esm.useFoo;
",
}
`;

exports[`externs-generator generation for various single-export modules 1`] = `
Object {
  "/out/cjs_named_exports.js": "// @formatter:off
const __cjs_named_exports = {};
__cjs_named_exports.bar;
__cjs_named_exports.foo;
",
  "/out/main_implicit.js": "// @formatter:off
var foo;
const __main_implicit = {};
",
  "/out/typings_synonym.js": "// @formatter:off
const __typings_synonym = {};
__typings_synonym.bar;
__typings_synonym.foo;
",
  "/out/untyped_cjs.js": "// @formatter:off
var UntypedCjs;
const __untyped_cjs = {};
__untyped_cjs.useFoo;
",
  "/out/untyped_cjs_and_esm.js": "// @formatter:off
var UntypedCjsAndEsm;
const __untyped_cjs_and_esm = {};
__untyped_cjs_and_esm.useFoo;
",
}
`;

exports[`externs-generator generation produces externs for a given set of modules with debug = false 1`] = `
Object {
  "/out/main_implicit.js": "// @formatter:off
var foo;
const __main_implicit = {};
",
  "/out/untyped_cjs.js": "// @formatter:off
var UntypedCjs;
const __untyped_cjs = {};
__untyped_cjs.useFoo;
",
}
`;

exports[`externs-generator generation produces externs for a given set of modules with debug = true 1`] = `
Object {
  "/out/main_implicit.js": "// @formatter:off
var foo; // ../node_modules/main-implicit/index.d.ts (2:18)
const __main_implicit = {};
",
  "/out/untyped_cjs.js": "// @formatter:off
var UntypedCjs; // ../node_modules/@types/untyped-cjs/index.d.ts (3:19)
const __untyped_cjs = {};
__untyped_cjs.useFoo; // ../node_modules/@types/untyped-cjs/index.d.ts (4:14)
",
}
`;
